[metadata]
name = pyflow-workflow-generator
version = attr: pyflow.version.__version__
author = European Centre for Medium-Range Weather Forecasts (ECMWF)
author_email = software.support@ecmwf.int
license = Apache 2.0
license_files = LICENSE
description = Create pythonic ecFlow suites
long_description = file: README.md
long_description_content_type=text/markdown
url = https://pyflow-workflow-generator.readthedocs.io/en/

[options]
packages = find:
include_package_data = True
install_requires =
    jinja2
    requests

[options.packages.find]
include = pyflow*

[options.extras_require]
diagrams =
    graphviz
tests =
    pytest
all =
    %(diagrams)s
    %(tests)s
